refactor to separate cast and validate methods